<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.registration.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            android:hint="@string/user_name"
            app:hintTextColor="@color/colorPrimaryDark"
            app:hintEnabled="true"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LoginUserNameInput"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            android:hint="@string/password"
            app:hintTextColor="@color/colorPrimaryDark"
            app:hintEnabled="true"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LoginPassWordInput"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:cornerRadius="10dp"
            android:id="@+id/LoginButton"
            android:textColor="@color/colorAccent"
            app:backgroundTint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/CreateAccount"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/create_account"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>
</layout>